Removed links from partners section

--- a/index.html
+++ b/index.html
@@ -233,16 +233,17 @@
             <div class = "partners-container">
                 <ul class = "partners-list">
                     <li>
-                        <a href = "https://traders.expert/" target="_blank" class = "caption">
+                        <a class = "caption">
                             <img src="images/logo header.png">
                         </a>
                     </li>
                     <li>
-                        <a href = "https://tradingacademy.expert/" target="_blank" class = "caption">
+                        <a class = "caption">
                             <img src="images/Trading Academy Expert logo.png">
                         </a>
-                    </li><li>
-                        <a href = "https://paintingthetape.com/" target="_blank" class = "caption">
+                    </li>
+                    <li>
+                        <a class = "caption">
                             <img src="images/Painting the tape logo.png">
                         </a>
                     </li>
